################################################################################
# Initialization
################################################################################

# minimum CMake version necessary to build projects
cmake_minimum_required( VERSION 2.8 )

project( Laboratorio10 )

add_executable(Lab10 main.cpp)
